fixed the html files

--- a/about.html
+++ b/about.html
@@ -21,11 +21,11 @@
       <div class="nav-links" id="navlinks">
         <i class="fa fa-times" onclick="hideMenu()"></i>
         <ul>
-          <li><a href="file:///F:/FIRST_PROGECT/index.html#home">Home</a></li>
-          <li><a href="file:///F:/FIRST_PROGECT/about.html">About</a></li>
-          <li><a href="file:///F:/FIRST_PROGECT/course.html">Course</a></li>
-          <li><a href="file:///F:/FIRST_PROGECT/blog.html#home">Blog</a></li>
-          <li><a href="file:///F:/FIRST_PROGECT/contact.html#home">Contact</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="course.html">Course</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
       <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -42,7 +42,7 @@
           quasi, laudantium omnis iure animi veritatis incidunt vel! Recusandae, sit tenetur. Lorem, ipsum dolor sit
           amet consectetur adipisicing elit. Incidunt pariatur quod minus, nemo earum nulla totam aliquam modi ullam
           recusandae doloribus iusto quam nisi cupiditate sequi, culpa dolore veritatis fuga.</p>
-          <a href="" class="btn-1 red-btn">EXPLORE NOW</a>
+        <a href="" class="btn-1 red-btn">EXPLORE NOW</a>
       </div>
       <div class="about-col">
         <img src="imgs/about.jpg" alt="">
